2001-12-10  Yanko Kaneti  <yaneti@declera.com>

	* libgnomeui.schemas: (menus/show-icons) fix default value 
	
Sun Dec 09 14:24:57 2001  George Lebl <jirka@5z.com>

	* gnome-icon-entry.c: don't use the deprecated _gtk_entry method
	  internally even. (it's kind of hypocritical of a widget to use
	  it's own deprecated api)

Sun Dec 09 14:15:01 2001  George Lebl <jirka@5z.com>

	* gnome-dialog.c, gnome-messagebox.c: Contrary to popular belief,
	  va_list is not a pointer and certainly not a string vector.  Use
	  the constructv method in the messagebox and don't check for
	  nullness of va_list in gnome_dialog_construct.

Sun Dec 09 14:04:22 2001  George Lebl <jirka@5z.com>

	* gnome-popup-menu.c, gnome-app.c:
	  s/gtk_accel_group_unref/g_object_unref/ to avoid using deprecated
	  macro and a warning

2001-12-08  James Henstridge  <james@daa.com.au>

	* gnome-app-helper.c (create_label): make the accel label
	use_underline, so that we have an underline.
	(create_menu_item): get rid of keyval arg to create_label, and
	don't bother setting up the uline.
	(create_help_entries): same here.
	(setup_uline_accel): remove useless function (not needed since
	addition of mnemonic support).
	(gtk_menu_ensure_uline_accel_group): remove this as well.
	(create_menu_item): remove the uline_accels argument, as it is
	useless.  It is still in the public APIs.

2001-12-08  ERDI Gergo  <cactus@cactus.rulez.org>

	* gnome-ui-init.c (libgnomeui_segv_handle): 
	* gnome-client.c (gnome_client_new_without_connection): 
	* gnome-app.c (gnome_app_class_init): use g_get_prgname () instead
	of program_invocation_name

2001-12-08  James Henstridge  <james@daa.com.au>

	* gnome-appbar.c (gnome_appbar_constructor): _priv->interactivity
	is a member of the enum.  When deciding on whether to make the
	status bar a label or entry, we want to check _priv->interactive.

	* gnome-ui-init.c (libgnomeui_post_args_parse): looks like the
	accelerator loading code got lost at some point.  Adding it back